[project]
name = "jennier0107.github.io"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jennier0107", email = "mt3085570450@outlook.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
docs = {shell = "cd docs && make html -e"}  # build sphinx docs
docs_p = {shell = 'python -m http.server -d docs/_build/html'}

[project.optional-dependencies]
doc = [
    "sphinx>=7.3.7",
    "sphinx-material>=0.0.36",
]
[tool.pdm]
distribution = false

